added seeder to fix problem product

--- a/public/assets/tpl/partials/sidebar.html
+++ b/public/assets/tpl/partials/sidebar.html
@@ -4,10 +4,10 @@
   </div>
   <div class="user-logged-in">
     <div class="content">
-      <div class="user-name">Katsumoto <span class="text-muted f9">admin</span></div>
-      <div class="user-email">last@samurai.jp</div>
+      <div class="user-name">{{user.name}}</div>
+      <div class="user-email">{{user.email}}</div>
       <div class="user-actions">
-        <a class="m-r-5" href="">settings</a> <a href="">logout</a>
+        <a class="m-r-5" href="">settings</a> <a ng-click="logout()">logout</a>
       </div>
     </div>
   </div>
