--- a/public/assets/tpl/partials/sidebar.html
+++ b/public/assets/tpl/partials/sidebar.html
@@ -20,5 +20,6 @@
     <a menu-link href="#/package" icon="">Packages</a>
     <a menu-link href="#/logistics" icon="">Logistics</a>
     <a menu-link href="#/user" icon="">Users</a>
+    <a menu-link href="#/settings" icon="">Settings</a>      
   </ul>
 </aside>
