--- a/public/assets/tpl/partials/sidebar.html
+++ b/public/assets/tpl/partials/sidebar.html
@@ -18,6 +18,7 @@
     <a menu-link href="#/category" icon="">Categories</a>
     <a menu-link href="#/logistics" icon="">Logistics</a>
     <a menu-link href="#/user" icon="">Users</a>
-    <!--<a menu-link href="#/settings" icon="">Settings</a>      -->
+		<a menu-link href="#/scraping" icon="">Scraping</a>
+    <!--<a menu-link href="#/settings" icon="">Settings</a>-->
   </ul>
 </aside>
